# pro-django-setup

./: .gitignore  Makefile  db.sqlite3  pyproject.toml
core/: settings.py
