[tool.poetry]
name = "pro-django-setup"
version = "0.1.0"
description = ""
authors = ["Ken Mwangi"]
license = "MIT"
readme = "README.md"
packages = [{include = "pro_django_setup"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
django-filter = "^23.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
